Bug 185439 - Redeal icon in Grandfather does not gray out after two redeals
Summary: Redeal icon in Grandfather does not gray out after two redeals
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-24 14:25 UTC by Tim Landscheidt
Modified: 2009-03-21 20:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Landscheidt 2009-02-24 14:25:17 UTC
Version:           3.1 (using 4.2.00 (KDE 4.2.0), 4.2.0-10.fc10 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.15-170.2.24.fc10.i686

If you play Grandfather, the redeal icon should gray out after two redeals. Instead, it remains clickable (but with no effect of course).
Comment 1 Matthias Fuchs 2009-03-21 20:50:35 UTC
SVN commit 942463 by mfuchs:

Redeal button disabled when no redeals are possible anymore. Also "Hint" and "Demo" are disabled when the game is lost.

BUG:185439



 M  +4 -9      view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=942463