Redeal button disabled when no redeals are possible anymore. Also "Hint" and "Demo" are disabled when the game is lost.

BUG:185439


svn path=/branches/KDE/4.2/kdegames/kpat/; revision=942463